style.css
/* ... */
.search input[type="text"] {
	height:auto;
	line-height:1.5;
	margin:0;
}

/* ---- Gallery Styles ---- */
.childTheme .wp-caption .wp-caption-text,
.childTheme .gallery-caption,
.childTheme .entry-caption {
	font-style: normal;
	font-size: 12px;
	line-height: 1.5;
	color: #111;
}

.childTheme .gallery .gallery-icon img {
	height: auto;
	max-width: 100%;
	padding: 0 !important;
	border: 0 !important;
}

/* ---- Responsive Styles ---- */
@media screen and (max-width:720px) {
	.childTheme .navbar-collapse { /* Removes scroll on mobile */
		padding-left: 15px ;
		padding-right: 15px ;
	}

	.mobile-display {
		display: block ;
	}

	.childTheme .main-content,
	.childTheme .has-sidebar .main-content,
	.childTheme .has-sidebar .sidebar {
		padding: 0 5%;
		width: 100%;
		margin-bottom: 50px;
		float: none;
	}

	ul.nav li.dropdown:hover > ul.dropdown-menu {
	    display: block;
		left: auto;
		opacity: 1;
	}

	.childTheme .dropdown-menu {
	    position: relative;
	    top: 100%;
	    left: 0;
	    z-index: 1000;
	    display: none;
	    float: none;
	    min-width: 100%;
	    padding: 5px 0;
	    margin: 2px 0 0;
	    font-size: 14px;
	    list-style: none;
	    background-color: #fff;
	    border: 1px solid #ccc;
	    border: 1px solid rgba(0,0,0,0.15);
	    border-radius: 0;
	    -webkit-box-shadow: none;
	    box-shadow: none;
	    background-clip: padding-box;
	}

	.childTheme	.dropdown-menu>li>a {
	    display: block;
	    padding: 8px 40px;
	    clear: both;
	    font-weight: normal;
	    color: #333;
	    white-space: nowrap;
	}

	.childTheme .entry-content,
	.has-sidebar .main-content {
		padding: 0;
	}

	/* ---- Header Styles ---- */
	.page-header-home {
		padding: 27.5px;
	}

	.childTheme .child-page-title {
		padding: 2% 0;
		font-size: 30px;
		font-weight: 300;
		line-height: 1.25;
	}

	.page-header-internal .child-page-title {
    	padding: 3% 0;
    	font-size: 24px;
	}
}

@media screen and (max-width:480px) {
	.childTheme .widget span {
		display: block;
	}

	.childTheme .widget .entry-categories span {
		display: inline-block;
	}

	.category .categoryName,.search .main-content h2.search-title {
		border-bottom:none;
		color:#666;
		font-size:1.5em;
	}

	.childTheme.page-home .flexItem:nth-of-type(n) {
		border:none;
		padding:0;
	}

	.no-js .childTheme.page-home .flexContainer,.no-js .childTheme.page-home .flexItem,.no-flexbox .childTheme.page-home .flexContainer,.no-flexbox .childTheme.page-home .flexItem {
		display:block;
		float:none;
		width:100%;
	}

	.childTheme .entry-content {
		padding: 0;
	}

	/* ---- Header Styles ---- */
	.page-header-internal .child-page-title {
    	padding: 2% 0;
	}

	/* ---- Sticky/Post Excerpts + Flexbox Layout---- */
	.excerpt-post,
	.category-post {
		flex-direction: column;
	}

	.excerpt-post__fig {
		margin: 0 auto;
		margin-bottom: 25px;
		min-width: 100%;
		max-width: 100%;
	}

	.staff-widget .textwidget {
		display: flex;
		align-items: flex-start;
	}

	.textwidget img {
		margin-right: 25px;
		position: relative;
		top: 15px;
	}

	.staff--body {
		flex:1;
	}

	/* ---- Exhibits Styles ---- */
	.category-post-content {
	    padding: 15px 15px 45px;
	}

	.category-image {
		height: 200px;
		min-width: 100% !important;
		background-position: center top;
	}

	.childTheme .exhibits-feed .category-init {
		background: #333;
		border-radius: 21px;
		-moz-border-radius: 21px;
		-webkit-border-radius: 21px;
		display: inline-block;
		line-height: 42px;
		text-align: center;
		width: 42px;
		z-index: -1 !important;
		font-size: 24px;
		font-weight: 300;
		position: relative;
		bottom:-15px;
		left: 30px;
	}

	.childTheme .exhibits-feed .catName {
		font-weight: bold;
		left: -25px;
		font-size: 16px;
		margin-top: 10px;
		position: relative;
		top: 10px;
	}

	.exhibit-ends {
		position: absolute;
		bottom: 10px;
		left: 15px;
		text-transform: uppercase;
		font-size: 13px;
	}

	/* ---- Gallery Styles ---- */
	.childTheme .gallery .gallery-item {
		width: 100% !important;
	}

	.childTheme .gallery-item a,
	.childTheme .gallery-caption {
		width: 100%;
	}

	.childTheme .gallery-caption {
		padding: 0 10px;
	}

	/* ---- Button (group) Styles ---- */
	.entry-content .button-set {
		display: block ;
		max-width: none ;
	}

	.entry-content .button-set:first-child {
		margin-right: 0;
		margin-bottom: 10px;
	}

	/* ---- Widget Styles ---- */
	.staff-widget {
		width: 100%;
		margin-right: 0;
		margin: 15px 0;
	}
}

@media screen and (max-width:380px) {
	/* ---- Header Styles ---- */
	.childTheme .child-page-title {
		font-size: 21px;
	}

	.page-header-internal {
    	padding: 5% 0;
    }

	.page-header-internal .child-page-title {
    	padding: 5%;
	}

	.page-header-internal .child-page-title a {
		font-size: 21px;
	}

	.child-tagline {
		font-size:12px;
	}

	.header-bg-image-high img {
		height: 100% ;
		width: auto;
	}

	/* ---- Sticky/Post Excerpts + Flexbox Layout---- */
	.wrap-section-hilite {
		flex-direction: column;
	}

	.section-hilite-image {
		margin: 0 auto;
		margin-bottom: 25px;
	}

	.section-hilite {
		text-align: center;
	}

	/* ---- Exhibits Styles ---- */
	.childTheme .exhibits-feed .cat-name {
		font-size: 14px;
	}
}

